tests/single_file_diag_remap_bad.stderr
tests/single_file_diag_remap_bad.sl:3:10: error: SL2003: unknown type
