tests/single_file_diag_remap_bad.sl
// Verifies single file diagnostic remap is rejected.
struct Vec3 {
	x, y, z NoSuchType
}

fn main() {}
